Square- not working properly

--- a/app/views/calculation_templates/square_from.html.erb
+++ b/app/views/calculation_templates/square_from.html.erb
@@ -1,10 +1,11 @@
 <h1>Howdy</h1>
 
 
-<form>
+<form action="/square/results">
   <label for="giraffe">Enter a number</label>
   <input id="giraffe" type="text" placeholder="What number we want to square" name="elephant">
 
-  <button>Caculate square</button>
+  <button> Caculate square </button>
 
 </form>
+
