--- a/app/views/calculation_templates/square_from.html.erb
+++ b/app/views/calculation_templates/square_from.html.erb
@@ -1,11 +1,11 @@
-<h1>Howdy</h1>
+<h1>Random Results</h1>
 
 
 <form action="/square/results">
   <label for="giraffe">Enter a number</label>
   <input id="giraffe" type="text" placeholder="What number we want to square" name="elephant">
 
-  <button> Caculate square </button>
+  <button type="submit"> Calculate square </button>
 
 </form>
 
