--- a/app/views/calculation_templates/square_results.html.erb
+++ b/app/views/calculation_templates/square_results.html.erb
@@ -4,9 +4,9 @@
   <dt>Number</dt>
   <dd><%= @num %></dd>
 
-  <dt>Square</dt>
+   <dt>Square</dt>
   <dd><%= @square_of_num %></dd>
 
 </dl>
 
-<a href = "/square/new"> Caculate another square
+<a href = "/square/new"> Pick another square
