--- a/app/views/calculation_templates/random_results.html.erb
+++ b/app/views/calculation_templates/random_results.html.erb
@@ -4,10 +4,10 @@
   <dd><%= @num %></dd>
 
   <dt>Maxmimum</dt>
-  <dd><%= @num %></dd>
+  <dd><%= @num_1 %></dd>
 
   <dt>Random Number</dt>
-  <dd><%= @num %></dd>
+  <dd><%= @rand_number %></dd>
 
 </dl>
 <a href = "/random/new"> Pick another random number
